Got the CSS link working with correct href

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Day 2 Demo</title>
+    <link rel= "stylesheet" href="css/reset.css">
+    <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
     <h1> Guessing Game</h1>
-    <link rel= "stylesheet css/reset.css">
-    <link rel= "stylesheet css/style.css">
+
 
   </body>
 </html>
