Added comment and h2 text

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <title>Day 2 Demo</title>
+
+    <!-- Thank you, Andrew, for the explanation that an 
+    href tag, pointing to the correct folder/file 
+    is required for the CSS to render on the HTML page
+    I have made the note here so that I have a 
+    reference going forward.  -->
+
     <link rel= "stylesheet" href="css/reset.css">
     <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
     <h1> Guessing Game</h1>
 
+    <h2> <em>All</em> questions need to be answered with "yes" or "no", please.
 
   </body>
 </html>
