Added link to js page to test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <h1> Guessing Game</h1>
 
     <h2> <em>All</em> questions need to be answered with "yes" or "no", please.
-
+      <script src="app.js"></script>
   </body>
 </html>
