Added a third option for my if else statments

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
+    
+    <!--
+<img src = "http://mzayat.com/single/138971.html" alt = "Chocolate bar in squares" style="width:500px; height:600px";>
+    --> 
+
     <h1> Guessing Game</h1>
 
-    <h2> <em>All</em> questions need to be answered with "yes" or "no", please.
-      <script src="app.js"></script>
+<script src="js/app.js">
+        </script>
   </body>
 </html>
