Adjusted text to display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!--
 <img src = "http://mzayat.com/single/138971.html" alt = "Chocolate bar in squares" style="width:500px; height:600px";>
     --> 
-
+    <h2> Using this as a sneaky way to push down my page text</h2>  
+    <h2> Sneaky second text line</h2>  
     <h1> Guessing Game</h1>
 
 <script src="js/app.js">
