Corrected first two game questions - need to retest functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <h2> Sneaky second text line</h2>  
     <h1> Guessing Game</h1>
 
-<script src="js/app.js">
-        </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
