Added ordered and unordered list items in HTML file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
     <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
+      <h1> Guessing Game</h1>
+      <h3>Experience Progression</h3>
+      <h4>Every job in this list built on the one before in some meaningful way</h4>
+        <ul>
+          <li>Western Union Agent</li>
+          <li>Human Resources for a small rural hospital</li>
+          <li>Payroll processing for 5-charity bingo hall</li>
+          <li>Engraver</li>
+          <li>Assistant at Credit Counseling Service</li>
+          <li>Help Desk Agent x 3</li>
+          <li>Service Request Manager</li>
+          <li>Change Manager</li>
+          <li>Volunteer Instructor for Seniors Learning Technology</li>
+          <li>Process Improvement Manager</li>
+        </ul>
+
+
     
     <!--
 <img src = "http://mzayat.com/single/138971.html" alt = "Chocolate bar in squares" style="width:500px; height:600px";>
@@ -20,6 +37,20 @@
     <h2> Using this as a sneaky way to push down my page text</h2>  
     <h2> Sneaky second text line</h2>  
     <h1> Guessing Game</h1>
+
+    <h3>10 Favorite Places Where I've Traveled</h3>
+    <ol>
+      <li>Prince Philip Island - Australia</li> <!-- 1 -->
+      <li>Hobart, Tasmania - Australia</li>     <!-- 2 -->
+      <li>London - United Kingdom</li>          <!-- 3 -->
+      <li>Paris - France</li>                   <!-- 4 -->
+      <li>Rome - Italy</li>                     <!-- 5 -->
+      <li>Florence - Italy</li>                 <!-- 6 -->
+      <li>Ennis - Ireland</li>                  <!-- 7 -->
+      <li>Shanghai - China</li>                 <!-- 8 -->
+      <li>Sydney - Australia</li>               <!-- 9 -->
+      <li>Xian - China</li>                     <!-- 10 -->
+    </ol>
 
     <script src="js/app.js"></script>
   </body>
