Fighting with HTML & CSS rendering atm

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Day 2 Demo</title>
-
-    <!-- Thank you, Andrew, for the explanation that an 
-    href tag, pointing to the correct folder/file 
-    is required for the CSS to render on the HTML page
-    I have made the note here so that I have a 
-    reference going forward.  -->
+    <title>Day 3 Demo</title>
 
     <link rel= "stylesheet" href="css/reset.css">
     <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
-      <h1> Guessing Game</h1>
+    <section><h1> Guessing Game</h1></section>
+      
+    <section>
       <h3>Experience Progression</h3>
       <h4>Every job in this list built on the one before in some meaningful way</h4>
+    </section>
+
+    <section></section>
         <ul>
           <li>Western Union Agent</li>
           <li>Human Resources for a small rural hospital</li>
@@ -36,9 +35,7 @@
     --> 
     <h2> Using this as a sneaky way to push down my page text</h2>  
     <h2> Sneaky second text line</h2>  
-    <h1> Guessing Game</h1>
-
-    <h3>10 Favorite Places Where I've Traveled</h3>
+<section><h3>10 Favorite Places Where I've Traveled</h3></section>
     <ol>
       <li>Prince Philip Island - Australia</li> <!-- 1 -->
       <li>Hobart, Tasmania - Australia</li>     <!-- 2 -->
