Cleaned up file for submission

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <section><h1> Guessing Game</h1></section>
       
+    <div></div> 
     <section>
       <h3>Experience Progression</h3>
       <h4>Every job in this list built on the one before in some meaningful way</h4>
@@ -33,8 +34,7 @@
     <!--
 <img src = "http://mzayat.com/single/138971.html" alt = "Chocolate bar in squares" style="width:500px; height:600px";>
     --> 
-    <h2> Using this as a sneaky way to push down my page text</h2>  
-    <h2> Sneaky second text line</h2>  
+<div></div>  
 <section><h3>10 Favorite Places Where I've Traveled</h3></section>
     <ol>
       <li>Prince Philip Island - Australia</li> <!-- 1 -->
