Setting up to push to master for submission

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Day 3 Demo</title>
+    <title>Sam I Am</title>
 
     <link rel= "stylesheet" href="css/reset.css">
     <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
+    <img src="images/maps.jpg" alt="Scattered maps" title="Scattered maps height 500px">
+    <div></div>
     <section><h1> Guessing Game</h1></section>
       
+    <div></div> 
+    <div></div> 
     <div></div> 
     <section>
       <h3>Experience Progression</h3>
